[package]
name = "alpine_md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0.4.22", features = ["serde"] }
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15.3"
env_logger = "0.9.0"
serde = { version= "1.0.144", features = ["derive"] }
