[package]
name = "alpine_md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8.0"
awc = { version = "3.0.1", features = ["rustls"] }
chrono = { version = "0.4.22", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15.3"
env_logger = "0.9.0"
jsonwebtoken = "8.1.1"
serde = { version= "1.0.144", features = ["derive"] }
